--- a/frontend/package.json
+++ b/frontend/package.json
@@ -49,6 +49,7 @@
     "framer-motion": "^12.23.0",
     "input-otp": "1.4.1",
     "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.454.0",
     "next": "15.2.4",
     "next-auth": "^4.24.11",
